--- a/OFPlugin/OFPlugin-Info.plist
+++ b/OFPlugin/OFPlugin-Info.plist
@@ -30,6 +30,7 @@
 		<string>A2E4D43F-41F4-4FB9-BB94-7177011C9AED</string>
 		<string>AD68E85B-441B-4301-B564-A45E4919A6AD</string>
 		<string>A16FF353-8441-459E-A50C-B071F53F51B7</string>
+		<string>9F75337B-21B4-4ADC-B558-F9CADF7073A7</string>
 	</array>
 	<key>XC4Compatible</key>
 	<true/>
