new UUID for 6.1.1

--- a/OFPlugin/OFPlugin-Info.plist
+++ b/OFPlugin/OFPlugin-Info.plist
@@ -30,6 +30,7 @@
 		<string>5EDAC44F-8E0B-42C9-9BEF-E9C12EEC4949</string>
 		<string>AABB7188-E14E-4433-AD3B-5CD791EAD9A3</string>
 		<string>7FDF5C7A-131F-4ABB-9EDC-8C5F8F0B8A90</string>
+		<string>C4A681B0-4A26-480E-93EC-1218098B9AA0</string>
 	</array>
 	<key>XC4Compatible</key>
 	<true/>
