--- a/OFXcodeMenu/OFXcodeMenu-Info.plist
+++ b/OFXcodeMenu/OFXcodeMenu-Info.plist
@@ -24,6 +24,7 @@
 	<string>1</string>
 	<key>DVTPlugInCompatibilityUUIDs</key>
 	<array>
+		<string>7265231C-39B4-402C-89E1-16167C4CC990</string>
 		<string>A16FF353-8441-459E-A50C-B071F53F51B7</string>
 		<string>9F75337B-21B4-4ADC-B558-F9CADF7073A7</string>
 		<string>E969541F-E6F9-4D25-8158-72DC3545A6C6</string>
