--- a/OFXcodeMenu/OFXcodeMenu-Info.plist
+++ b/OFXcodeMenu/OFXcodeMenu-Info.plist
@@ -24,6 +24,7 @@
 	<string>1</string>
 	<key>DVTPlugInCompatibilityUUIDs</key>
 	<array>
+		<string>DA4FDFD8-C509-4D8B-8B55-84A7B66AE701</string>
 		<string>F41BD31E-2683-44B8-AE7F-5F09E919790E</string>
 		<string>7265231C-39B4-402C-89E1-16167C4CC990</string>
 		<string>A16FF353-8441-459E-A50C-B071F53F51B7</string>
